--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ google-cloud-storage==2.18.2
 azure-storage-blob==12.23.1
 azure-identity==1.19.0
 waitress==3.0.1
+google-cloud-secret-manager==2.24.0
